added new position

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row">
                 <header class="centered">
                     <h1>Eric William Dolan</h1>
-                    <p>Entrepreneur, Consultant & Data Scientist</p>
+                    <p>Entrepreneur & Data Scientist</p>
                 </header>
                 <div class="social-icons">
                         <a href="https://twitter.com/Eisforinnovate" class="btn btn-round btn-clear btn-twitter"><i class="fa fa-twitter"></i></a>
@@ -253,10 +253,18 @@
                      <p>Financial and Organizational Consultant </p>
                      <br></br>
                   </header>
-                    <p>I consulted with a scrappy 12 person startup, HQ'd at a repoursed abandoned woman's gym, in the summer of 2013. I was the man with many hats, and learnt alot of new things on the fly. From financial projects to game metrics to hacking internal tools, I got the full startup experience.
-
-</p>
+                    <p>I consulted with a scrappy 12 person startup, HQ'd at a repoursed abandoned woman's gym, in the summer of 2013. I was the man with many hats, and learnt alot of new things on the fly. From financial projects to game metrics to hacking internal tools, I got the full startup experience.</p>
                 </article>
+                </div>
+                  <div class="col-md-3">
+                  <article class="experience">
+                    <header>
+                      <h3 >MMB Networks</h3>
+                       <p>Sales Associate</p>
+                       <br></br
+                    </header>
+                      <p>I currently am working with a Toronto startup in the Internet of Things (IoT) and Smart Grid space. We provide hardware and software to large and small organizations that innovate our everyday lives. I am invlolved with sales, marketing, opperations and product development.</p>
+                  </article>
                 </div>
             </div>
         </div>
