new photo & description
I added a new photo and some other things

--- a/index.html
+++ b/index.html
@@ -113,13 +113,10 @@
                 </header>
             <div class="row">
               <div class="col-md-3">
-                 <div class="profile"><img src="img/profile.png" alt="profile"/></div> 
+                 <div class="profile"><img src="img/like_a_baus.jpg" alt="profile"/></div> 
               </div>
                <div class="col-md-9">
-                <p>I bridge the gap between the technical and non technical members of a team. </p>
-                <p>Within this role, I must be flexible in my approach. I am able to dig deep into the details of a problem, while still being able to communicate it clearly and simply within a pitch. I am an experienced entrepreneur, with a Business Management degree, Specialization in Finance and Administration, from Western University. I am currently studying Data Science from Johns Hopkins University, Bloomberg School of Public Health and Informatics. I am constantly learning, and will continue to do so for the foreseeable future. I intend to found an enterprise data science solution software company. </p>
-                <p>I believe that telling the story of your data is just as important as analyzing it. The ability to clearly communicate what happened and what can be done is imperative to making an effective data driven strategy. I have a product and team focused view, and demonstrate so within my work. </p>
-                 <p>Feel free to message. I am an open book and quite conversational.Eligible to work in Canada and Europe.</p>
+                <p>I'm a Sales Associate at MMB Networks, a Canadian engineering firm in the Internet of Things(IoT) and Smart Grid sectors. I am involved with sales, account management, product dev, marketing and operations. We are building the future of the connected home and making it a reality. I'm also an experienced entrepreneur, with a Business Management degree, Specialization in Finance and Administration, from Western University. I am currently studying Data Science from Johns Hopkins University, Bloomberg School of Public Health and Informatics.I believe that data must be open, clear and actionable in order to create systemic change..</p>
 
                 <p><strong>Focus:</strong> Startups, Management, Lean, Data Science, Big Data, Enterprise Solutions</p>
                 
@@ -220,7 +217,7 @@
                   <article class="experience">
                     <header>
                       <h3>Brainstation</h3>
-                      <p>Campus Outreach Manager</p>
+                      <p>Campus Outreach Manager (Education Technology)</p>
                       <br></br>
                     </header>
                       <p>Organized and executed event marketing and promotion for Brainstation's Western coding event. Co-ordinated and established community partnerships. Operated on a $0 marketing budget and produced a well attended event. </p>
@@ -231,7 +228,7 @@
                     <header>
                       <h3 >Alooksie</h3>
                        <p>Business and Product Development/</p>
-                        <p>Co-founder</p>
+                        <p>Co-founder (Mobile Social Network + Machine Learning)</p>
                     </header>
                       <p> A talented 3 person set forth to build a social network that was mobile first and used your location, interests and current time of day as suggestion criteria. Accepted to the 2014 Next 36 selection weekend, the code is currently open source. </p>
                   </article>
@@ -240,7 +237,7 @@
                   <article class="experience">
                     <header>
                       <h3 >TechVibes</h3>
-                       <p>Guest Writer</p>
+                       <p>Guest Writer (Technology & Media)</p>
                        <br></br
                     </header>
                       <p>I am a guest writer for TechVibes, one of Canada's leading sources of technology news. I cover topics of my own entrepreneurial experiences in the tech sector. My works are featured in the portfolio below.</p>
@@ -250,7 +247,7 @@
                 <article class="experience">
                   <header>
                     <h3>Slightly Social</h3>
-                     <p>Financial and Organizational Consultant </p>
+                     <p>Financial and Organizational Consultant (Mobile Social Gaming) </p>
                      <br></br>
                   </header>
                     <p>I consulted with a scrappy 12 person startup, HQ'd at a repoursed abandoned woman's gym, in the summer of 2013. I was the man with many hats, and learnt alot of new things on the fly. From financial projects to game metrics to hacking internal tools, I got the full startup experience.</p>
@@ -260,7 +257,7 @@
                   <article class="experience">
                     <header>
                       <h3 >MMB Networks</h3>
-                       <p>Sales Associate</p>
+                       <p>Sales Associate (Enterprise, Internet of Things & Smart Grid)</p>
                        <br></br
                     </header>
                       <p>I currently am working with a Toronto startup in the Internet of Things (IoT) and Smart Grid space. We provide hardware and software to large and small organizations that innovate our everyday lives. I am invlolved with sales, marketing, opperations and product development.</p>
