--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                   <article class="experience">
                     <header>
                       <h3>Brainstation</h3>
-                      <p>Campus Outreach Manager (Education Technology)</p>
+                      <p>Campus Outreach Manager (Education Technology)<strong> 2014</strong></p>
                       <br></br>
                     </header>
                       <p>Organized and executed event marketing and promotion for Brainstation's Western coding event. Co-ordinated and established community partnerships. Operated on a $0 marketing budget and produced a well attended event. </p>
@@ -228,7 +228,7 @@
                     <header>
                       <h3 >Alooksie</h3>
                        <p>Business and Product Development/</p>
-                        <p>Co-founder (Mobile Social Network + Machine Learning)</p>
+                        <p>Co-founder (Mobile Social Network + Machine Learning)<strong>2013-2014</strong></p>
                     </header>
                       <p> A talented 3 person set forth to build a social network that was mobile first and used your location, interests and current time of day as suggestion criteria. Accepted to the 2014 Next 36 selection weekend, the code is currently open source. </p>
                   </article>
@@ -237,7 +237,7 @@
                   <article class="experience">
                     <header>
                       <h3 >TechVibes</h3>
-                       <p>Guest Writer (Technology & Media)</p>
+                       <p>Guest Writer (Technology & Media)<strong>Present</strong></p>
                        <br></br
                     </header>
                       <p>I am a guest writer for TechVibes, one of Canada's leading sources of technology news. I cover topics of my own entrepreneurial experiences in the tech sector. My works are featured in the portfolio below.</p>
@@ -247,7 +247,7 @@
                 <article class="experience">
                   <header>
                     <h3>Slightly Social</h3>
-                     <p>Financial and Organizational Consultant (Mobile Social Gaming) </p>
+                     <p>Financial and Organizational Consultant (Mobile Social Gaming)<strong>2013</strong> </p>
                      <br></br>
                   </header>
                     <p>I consulted with a scrappy 12 person startup, HQ'd at a repoursed abandoned woman's gym, in the summer of 2013. I was the man with many hats, and learnt alot of new things on the fly. From financial projects to game metrics to hacking internal tools, I got the full startup experience.</p>
@@ -257,7 +257,7 @@
                   <article class="experience">
                     <header>
                       <h3 >MMB Networks</h3>
-                       <p>Sales Associate (Enterprise, Internet of Things & Smart Grid)</p>
+                       <p>Sales Associate (Enterprise, Internet of Things & Smart Grid) <strong> Present</strong></p>
                        <br></br
                     </header>
                       <p>I currently am working with a Toronto startup in the Internet of Things (IoT) and Smart Grid space. We provide hardware and software to large and small organizations that innovate our everyday lives. I am invlolved with sales, marketing, opperations and product development.</p>
