--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     
                     
                 </div>
-                <a href="neutun.eisforinnovate.com" class="btn btn-default hire-me">See Neutun</a>
+                <a href="neutun.eisforinnovate.com" class="btn btn-default hire-me">Go To Neutun</a>
             </div>
         </div>
     </section><!-- welcome ends -->
