--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@
                      <div class="spacer"></div>
                     <p class="section-subtitle"><i>"The only source of knowledge is experience"</i>-albert einstein</p>
                 </header>
+                <div class="col-md-3">
+                  <article class="experience">
+                    <header>
+                      <h3 >Covers4Change</h3>
+                       <p>Cofounder, Product Dev and Operations(NPO, Design) <strong>2011-2012</strong></p>
+                       <br></br
+                    </header>
+                      <p>Cofounded a non profit organization (NPO) through a university feasability project. Designed and produced laptop covers for partnered charitable organizations, including: Epilepsy Ontario, Holland Bloorview Children's Hospital and Wadeng-Wings of Hope. A finalist for the Richard Ivey School of Business Feasability competition and the subject of an Ivey Business Case Study. </p>
+                  </article>
+                </div>
                 <div class="row">
                  <div class="col-md-3">
                   <article class="experience">
