--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                     </header>
                       <p>Cofounded a non profit organization (NPO) through a university feasability project. Designed and produced laptop covers for partnered charitable organizations, including: Epilepsy Ontario, Holland Bloorview Children's Hospital and Wadeng-Wings of Hope. A finalist for the Richard Ivey School of Business Feasability competition and the subject of an Ivey Business Case Study. </p>
                   </article>
-
+                  </div>
+                  
 
                 <div class="row">
                  <div class="col-md-3">
